openshift-resource-definitions/deployment_config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: maarten-playground
  name: 'quarkus-grpc'
  annotations: {}
  labels:
    app: quarkus-grpc
    app.kubernetes.io/component: quarkus-grpc
    app.kubernetes.io/instance: quarkus-grpc
    app.kubernetes.io/name: quarkus-grpc
    app.kubernetes.io/part-of: quarkus-grpc
    app.openshift.io/runtime-namespace: maarten-playground
spec:
  selector:
    matchLabels:
      app: quarkus-grpc
  replicas: 1
  template:
    metadata:
      labels:
        app: quarkus-grpc
        app.kubernetes.io/component: quarkus-grpc
        app.kubernetes.io/name: quarkus-grpc
        deployment: quarkus-grpc
    spec:
      containers:
        - name: container
          image: >-
            quay.io/appdev_playground/quarkus-grpc:uberjar-0.0.18
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          env: []
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  paused: false
