openshift-resource-definitions/https_service_config.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-https
  namespace: maarten-playground
  labels:
    app: quarkus-grpc
    app.kubernetes.io/component: quarkus-grpc
    app.kubernetes.io/instance: quarkus-grpc
    app.kubernetes.io/name: quarkus-grpc
    app.kubernetes.io/part-of: quarkus-grpc
spec:
  ports:
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    app: quarkus-grpc
    deployment: quarkus-grpc
  type: ClusterIP
