openshift-resource-definitions/grpc_route_config.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-quarkus-grpc
  namespace: maarten-playground
  labels:
    app: quarkus-grpc
    app.kubernetes.io/component: quarkus-grpc
    app.kubernetes.io/instance: quarkus-grpc
    app.kubernetes.io/name: quarkus-grpc
    app.kubernetes.io/part-of: quarkus-grpc
spec:
  host: quarkus-grpc-maarten-playground.apps.ocp4-bm.redhat.arrowlabs.be
  port:
    targetPort: 8443-tcp
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  to:
    kind: Service
    name: quarkus-grpc
